Update playground svelte_webpack dev server to 8081

--- a/UI/playground/Svelte_Webpack/package.json
+++ b/UI/playground/Svelte_Webpack/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack-dev-server --content-base public"
+    "dev": "webpack-dev-server --port 8081 --content-base public"
   },
   "dependencies": {
     "axios": "^0.18.0",
