--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -30,6 +30,7 @@
     "localStorage": "^1.0.4",
     "loglevel": "^1.6.1",
     "plotly.js": "^1.47.4",
+    "qrcode": "^1.3.3",
     "react": "^16.7.0",
     "react-addons-css-transition-group": "^15.3.0",
     "react-chartjs-2": "^2.7.4",
