--- a/DB/apollo_gql_server/package.json
+++ b/DB/apollo_gql_server/package.json
@@ -1,18 +1,20 @@
 {
   "name": "apollo_gql_server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Wahaha HYV DB",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "dev2": "nodemon index.html",
     "mstart": "nodemon index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "react-dom": "latest",
+    "react": "latest",
+    "moment": "2",
+    "antd": "latest",
     "apollo-server": "^2.4.2",
     "express": "^4.16.4",
     "express-ws": "^4.0.0",
@@ -28,6 +30,20 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
-    "babel-register": "^6.6.0"
+    "babel-register": "^6.6.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
+    "json-loader": "^0.5.4",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.28.2",
+    "webpack-bundle-analyzer": "^3.0.4",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-shell-plugin": "^0.5.0"
   }
 }
