--- a/UI/InspectionMonitor/package.json
+++ b/UI/InspectionMonitor/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "dependencies": {
     "antd": "^3.18.2",
+    "chart.js": "^2.8.0",
+    "chartjs-plugin-annotation": "^0.5.7",
     "express": "^4.16.4",
     "express-ws": "^4.0.0",
     "jsonp": "^0.2.1",
     "loglevel": "^1.6.2",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.13",
     "nodemon": "^1.18.10",
     "qr-scanner": "^1.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-resize-detector": "^4.1.4",
     "react-scripts": "3.0.1"
   },
+  "homepage": "./",
   "scripts": {
     "mstart": "nodemon server.js",
     "start": "react-scripts start",
