--- a/UI/InspectionMonitor/package.json
+++ b/UI/InspectionMonitor/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "hyvdb_service",
+  "name": "InspectionMonitor",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "antd": "^3.18.2",
     "chart.js": "^2.8.0",
     "chartjs-plugin-annotation": "^0.5.7",
-    "express": "^4.16.4",
-    "express-ws": "^4.0.0",
+    "chartjs-plugin-zoom": "^0.7.0",
     "jsonp": "^0.2.1",
     "loglevel": "^1.6.2",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.13",
-    "nodemon": "^1.18.10",
     "qr-scanner": "^1.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -21,7 +18,6 @@
   },
   "homepage": "./",
   "scripts": {
-    "mstart": "nodemon server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
