--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -35,6 +35,7 @@
     "react-addons-css-transition-group": "^15.3.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
+    "react-drag-sortable": "^1.0.6",
     "react-plotly.js": "^2.3.0",
     "react-redux": "^5.1.1",
     "react-resize-detector": "^3.2.1",
