--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -33,10 +33,8 @@
     "qrcode": "^1.3.3",
     "react": "^16.7.0",
     "react-addons-css-transition-group": "^15.3.0",
-    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
     "react-drag-sortable": "^1.0.6",
-    "react-plotly.js": "^2.3.0",
     "react-redux": "^5.1.1",
     "react-resize-detector": "^3.2.1",
     "redux": "^4.0.1",
@@ -53,6 +51,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.6.0",
+    "compression-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
