--- a/InspectionCore/common_lib/Makefile
+++ b/InspectionCore/common_lib/Makefile
@@ -8,7 +8,8 @@ IDIR=	./include/ \
 			$(MODULE_zlib)/src
 
 ODIR=obj
-_OBJ = Util.o
+_OBJ = Util.o SOCK_Msg_Flow.opp
+
 target_a= $(addsuffix .a ,$(MODULE_NAME))
 ESS_TRACK=$(wildcard $(addsuffix /*.h* ,$(IDIR)))
 include ../Makefile.in
