OpenJSCad add Pentagon gopro mount for plating check prototype

--- a/Peripheral/misc/OpenJSCAD/package.json
+++ b/Peripheral/misc/OpenJSCAD/package.json
@@ -18,7 +18,8 @@
   "author": "Mark 'kaosat-dev' Moissette & sons",
   "license": "MIT",
   "dependencies": {
-    "@jscad/csg": "0.5.2",
-    "jscad-tree-experiment": "github:kaosat-dev/jscad-tree-experiments"
+    "@jscad/csg": "^0.7.0",
+    "@jscad/stl-deserializer": "^0.3.3",
+    "@jscad/stl-serializer": "^0.2.0"
   }
 }
