--- a/UI/InspectionMonitor/package.json
+++ b/UI/InspectionMonitor/package.json
@@ -7,6 +7,7 @@
     "chart.js": "^2.8.0",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-zoom": "^0.7.0",
+    "clone": "^2.1.2",
     "jsonp": "^0.2.1",
     "loglevel": "^1.6.2",
     "moment": "^2.24.0",
