--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -30,18 +30,20 @@
     "jsum": "^0.1.4",
     "localStorage": "^1.0.4",
     "loglevel": "^1.6.1",
-    "plotly.js": "^1.47.4",
-    "qrcode": "^1.3.3",
+    "plotly.js": "^1.54.1",
+    "qrcode": "^1.4.4",
     "react": "^16.12.0",
     "react-addons-css-transition-group": "^15.3.0",
     "react-dom": "^16.12.0",
     "react-drag-sortable": "^1.0.6",
-    "react-redux": "^5.1.1",
+    "react-redux": "^7.2.0",
     "react-resize-detector": "^3.2.1",
     "redux": "^4.0.1",
+    "redux-react-hook": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "semver": "^6.1.0",
     "text-encoding": "^0.7.0",
+    "webpack-dev-server": "^3.10.3",
     "xstate": "^3.3.3"
   },
   "devDependencies": {
@@ -62,10 +64,9 @@
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
-    "webpack": "^4.28.2",
+    "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14",
+    "webpack-cli": "^3.3.11",
     "webpack-shell-plugin": "^0.5.0"
   },
   "scripts": {
