--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -15,57 +15,58 @@
     ]
   },
   "dependencies": {
-    "@antv/data-set": "^0.10.1",
-    "@antv/g2": "^3.4.8",
-    "antd": "^3.18",
-    "chart.js": "^2.7.3",
+    "@antv/data-set": "^0.11.4",
+    "@antv/g2": "^4.0.10",
+    "@babel/preset-react": "^7.10.1",
+    "antd": "^4.3",
+    "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "clone": "^2.1.2",
     "color": "^3.1.2",
     "create-react-class": "^15.6.3",
-    "cytoscape": "^3.3.0",
-    "cytoscape-cose-bilkent": "^4.0.0",
+    "cytoscape": "^3.15.0",
+    "cytoscape-cose-bilkent": "^4.1.0",
     "dateformat": "^3.0.3",
-    "jsonp": "^0.2.0",
+    "jsonp": "^0.2.1",
     "jsum": "^0.1.4",
     "localStorage": "^1.0.4",
-    "loglevel": "^1.6.1",
+    "loglevel": "^1.6.8",
     "plotly.js": "^1.54.1",
     "qrcode": "^1.4.4",
-    "react": "^16.12.0",
-    "react-addons-css-transition-group": "^15.3.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-dom": "^16.13.1",
     "react-drag-sortable": "^1.0.6",
     "react-redux": "^7.2.0",
-    "react-resize-detector": "^3.2.1",
-    "redux": "^4.0.1",
+    "react-resize-detector": "^4.2.3",
+    "redux": "^4.0.5",
     "redux-react-hook": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "semver": "^6.1.0",
+    "semver": "^7.3.2",
     "text-encoding": "^0.7.0",
-    "webpack-dev-server": "^3.10.3",
-    "xstate": "^3.3.3"
+    "webpack-dev-server": "^3.11.0",
+    "xstate": "^4.10.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-import": "^1.11.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "babel-register": "^6.6.0",
-    "compression-webpack-plugin": "^3.1.0",
-    "cross-env": "^5.2.0",
-    "css-loader": "^1.0.1",
-    "file-loader": "^2.0.0",
-    "json-loader": "^0.5.4",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "url-loader": "^1.1.2",
+    "@babel/core": "^7.10.2",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "compression-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
+    "json-loader": "^0.5.7",
+    "less": "^3.11.3",
+    "less-loader": "^6.1.0",
+    "style-loader": "^1.2.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
     "webpack-shell-plugin": "^0.5.0"
   },
