--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
     "babel-preset-es2015": "^6.24.1",
