--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.1",
     "@antv/data-set": "^0.11.4",
     "@antv/g2": "^4.0.10",
     "@babel/preset-react": "^7.10.1",
