Core: Add Feature management for connector cable color inspection

--- a/InspectionCore/MatchingEngine/Makefile
+++ b/InspectionCore/MatchingEngine/Makefile
@@ -16,7 +16,7 @@ VPATH = ./ ./MorphEngine
 ODIR=obj
 _OBJ = MatchingEngine.opp MatchingCore.opp FeatureManager.opp FeatureExtractor.opp ContourGrid.opp \
 			 FeatureManager_group.opp FeatureManager_platingCheck.opp FeatureManager_sig360_circle_line.opp \
-			 MorphEngine.opp FeatureReport_UTIL.opp FeatureManager_stage_light_report.opp
+			 MorphEngine.opp FeatureReport_UTIL.opp FeatureManager_stage_light_report.opp FeatureManager_gen.opp 
 target_a= $(addsuffix .a ,$(MODULE_NAME))
 ESS_TRACK=$(wildcard $(addsuffix /*.h* ,$(IDIR)))
 include ../Makefile.in
