--- a/InspectionCore/Makefile
+++ b/InspectionCore/Makefile
@@ -56,7 +56,7 @@ IDIR=	include/ \
 
 
 
-_OBJ = main.opp playground.opp MicroInsp_FType.opp Ext_Util_API.opp
+_OBJ = main.opp playground.opp MicroInsp_FType.opp Ext_Util_API.opp tmpCodes.opp wiringPanel.opp
 
 MLNN_OBJS=MLNNUtil.opp MLNL.opp MLNN.opp MLOpt.opp
 
