--- a/InspectionCore/sidePrj/linemod/Makefile
+++ b/InspectionCore/sidePrj/linemod/Makefile
@@ -53,7 +53,7 @@ else
 endif
 
 STRICT_FLAGS= -Wall -Wextra -Werror -Wreturn-type -Werror=return-type
-STRICT_FLAGS+= -march=core2 -mtune=intel -fdeclspec
+STRICT_FLAGS+= -march=core2 -mtune=intel -fdeclspec  -mavx2
  
 export FLAGS+= -w -O3 $(STRICT_FLAGS)
 
