--- a/UI/ElectronApp/package.json
+++ b/UI/ElectronApp/package.json
@@ -11,7 +11,6 @@
     "publish": "electron-forge publish",
     "lint": "eslint src --color",
     "package-mac": "electron-packager src/ --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds"
-        
   },
   "keywords": [],
   "author": "mdm",
@@ -56,9 +55,8 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "electron-builder": "^22.9.1",
+    "electron": "^11.1.1",
     "electron-forge": "^5.2.4",
-    "electron-packager": "^15.2.0",
     "electron-prebuilt-compile": "8.2.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
