--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -38,6 +38,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.13.1",
     "react-drag-sortable": "^1.0.6",
+    "react-numpad": "^5.1.3",
     "react-redux": "^7.2.0",
     "react-resize-detector": "^4.2.3",
     "redux": "^4.0.5",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
     "babel-preset-es2015": "^6.24.1",
@@ -61,9 +63,11 @@
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
+    "fsevents": "^2.3.1",
     "json-loader": "^0.5.7",
     "less": "^3.11.3",
     "less-loader": "^6.1.0",
+    "react-refresh": "^0.9.0",
     "style-loader": "^1.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
