Core.contrib: add MJPEGWriter lib for simple video streaming

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ calibration
 OUT
 UI/ElectronApp/release-builds
 *.pyc
+InspectionCore/contrib/MJPEGWriter/CMakeFiles
+CMakeCache.txt
+MJPEGWriter_test
+InspHub
