--- a/UI/ElectronApp/package.json
+++ b/UI/ElectronApp/package.json
@@ -49,7 +49,8 @@
   },
   "dependencies": {
     "electron-compile": "^6.4.4",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "ws": "^7.4.5"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -57,6 +58,7 @@
     "babel-preset-react": "^6.24.1",
     "electron": "^11.1.1",
     "electron-forge": "^5.2.4",
+    "electron-packager": "^11.2.1",
     "electron-prebuilt-compile": "8.2.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
