--- a/UI/Electron_XPLAT/package.json
+++ b/UI/Electron_XPLAT/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package-mac": "electron-packager ./ --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds"
+    "package-mac": "electron-packager ./ --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
+    "package": "electron-packager ./ --overwrite --arch=x64 --prune=true --out=release-builds"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
