Core: update for windows platform

--- a/InspectionCore/MJPEG_Streamer/Makefile
+++ b/InspectionCore/MJPEG_Streamer/Makefile
@@ -1,8 +1,10 @@
 
 export MODULE_logctrl?=$(abspath ../logctrl)
 
+export MODULE_common_lib?=$(abspath ../common_lib)
 ESS_TRACK= $(wildcard include/*)
-IDIR=./include/	$(MODULE_logctrl)/include \
+IDIR=./include/	$(MODULE_logctrl)/include $(MODULE_common_lib)/include 
+
 ODIR=obj
 _OBJ = MJPEG_Streamer.opp
 
