--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^7.2.3",
     "react-resize-detector": "^4.2.3",
     "redux": "^4.0.5",
+    "redux-catch": "^1.3.1",
     "redux-react-hook": "^4.0.3",
     "redux-thunk": "^2.3.0",
     "semver": "^7.3.5",
@@ -50,7 +51,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
-    "webpack-dev-server": "^3.11.2",
     "@babel/preset-env": "^7.13.15",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.2.2",
@@ -73,6 +73,7 @@
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2",
     "webpack-shell-plugin": "^0.5.0"
   },
   "scripts": {
