uInspMega rewrite gate sensing logic

--- a/Peripheral/uInspMEGA/platformio.ini
+++ b/Peripheral/uInspMEGA/platformio.ini
@@ -12,5 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+upload_speed = 115200
 lib_deps = https://github.com/arduino-libraries/Ethernet.git
   SPI
+monitor_speed = 115200
