slideInsp: add webSocket and webServer base code

--- a/Peripheral/slideInsp_ESP32/platformio.ini
+++ b/Peripheral/slideInsp_ESP32/platformio.ini
@@ -11,15 +11,21 @@
 [platformio]
 src_dir = ./
 
-[env:esp32cam]
+[env:esp32dev]
 platform = espressif32
 board = esp32cam
+board_build.f_cpu = 80000000L
 framework = arduino
 upload_speed = 921600
 upload_port = /dev/cu.SLAB_USBtoUART
 monitor_port = /dev/cu.SLAB_USBtoUART
 monitor_speed = 921600
 lib_deps = 
+  WiFi
   https://github.com/bblanchon/ArduinoJson.git
   https://github.com/me-no-dev/AsyncTCP.git
   https://github.com/me-no-dev/ESPAsyncWebServer.git
+
+  
+board_build.embed_txtfiles = 
+  resource/webapp/index.html
