Core:CameraLayer_aravis: update

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ cmake_install.cmake
 CORE_HUB
 InspectionCore/CoreHub/Makefile
 UI/Electron_XPLAT/release-builds
+InspectionCore/contrib/aravis/test/arvTool/arvtool
