--- a/InspectionCore/Core0_1/Makefile
+++ b/InspectionCore/Core0_1/Makefile
@@ -29,6 +29,7 @@ export MODULE_lodepng=$(abspath $(moduleRoot)/contrib/lodepng)
 export MODULE_DataChannel=$(abspath $(moduleRoot)/DataChannel)
 export MODULE_CameraLayer=$(abspath $(moduleRoot)/CameraLayer)
 export MODULE_MJPEG_Streamer=$(abspath $(moduleRoot)/MJPEG_Streamer)
+export MODULE_hikrobot_camera_sdk=$(abspath $(moduleRoot)/contrib/hikrobot_camera_sdk)
 
 
 # export MODULE_MLNN=$(abspath $(moduleRoot)/MLNN)
@@ -38,6 +39,7 @@ export SO_EXPORT_PATH=$(abspath .)
 
 
 export FEATURE_COMPILE_W_ARAVIS=0
+export FEATURE_COMPILE_W_hikrobot_CAMERA_SDK=0
 
 
 # export GLEWSRCDir=$(abspath ../../$(moduleRoot)/glew-2.1.0)
@@ -69,7 +71,7 @@ IDIR=	include/ \
 
 
 
-_OBJ = main.opp playground.opp MicroInsp_FType.opp Ext_Util_API.opp tmpCodes.opp wiringPanel.opp
+_OBJ = main.opp playground.opp MicroInsp_FType.opp Ext_Util_API.opp tmpCodes.opp wiringPanel.opp democode.opp
 
 MLNN_OBJS=MLNNUtil.opp MLNL.opp MLNN.opp MLOpt.opp
 
@@ -91,6 +93,7 @@ ifeq ($(OS)$(CC),Windows_NTcc)
 	EXT_OBJS+= $(MODULE_zlib)/staticlib/libz.a \
 			   $(MODULE_MindVision_GIGE)/lib/MVCAMSDK.lib
 	FLAGS+= -D_MINGW -D_WINDOWS
+	FEATURE_COMPILE_W_hikrobot_CAMERA_SDK=1
 	
 else
 	FLAGS+= -lmvsdk  -std=c++11 -L$(MODULE_MindVision_GIGE)/lib/
@@ -146,6 +149,11 @@ ifeq ($(FEATURE_COMPILE_W_ARAVIS),1)
 	LIBS+=`pkg-config --libs glib-2.0` -lgobject-2.0  $(MODULE_aravis)/src/libaravis-0.8.0.dylib  -Wl,-rpath .
 endif
 
+ifeq ($(FEATURE_COMPILE_W_hikrobot_CAMERA_SDK),1)
+	FLAGS+= -D FEATURE_COMPILE_W_hikrobot_CAMERA_SDK
+	IDIR+=$(MODULE_hikrobot_camera_sdk)/includes
+	LIBS+=$(MODULE_hikrobot_camera_sdk)/libraries/win64/MvCameraControl.lib
+endif
 
 export FLAGS+= -w -O3 $(STRICT_FLAGS) 
 
