Core0_1: add Mindvision back

--- a/InspectionCore/Core0_1/Makefile
+++ b/InspectionCore/Core0_1/Makefile
@@ -93,7 +93,7 @@ ifeq ($(OS)$(CC),Windows_NTcc)
 	EXT_OBJS+= $(MODULE_zlib)/staticlib/libz.a 
 	FLAGS+= -D_MINGW -D_WINDOWS
 	FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK=1
-	# FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK=1
+	FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK=1
 else
 	FLAGS+=  -std=c++11
 	EXT_OBJS+=
