slideInsp: comment update

--- a/Peripheral/slideInsp_ESP32/platformio.ini
+++ b/Peripheral/slideInsp_ESP32/platformio.ini
@@ -17,8 +17,12 @@ board = esp32cam
 board_build.f_cpu = 80000000L
 framework = arduino
 upload_speed = 921600
-upload_port = /dev/cu.SLAB_USBtoUART
-monitor_port = /dev/cu.SLAB_USBtoUART
+
+
+; upload_port = /dev/cu.SLAB_USBtoUART
+; monitor_port = /dev/cu.SLAB_USBtoUART
+
+
 monitor_speed = 921600
 lib_deps = 
   WiFi
