Core: decide to refactor the DatCH

--- a/InspectionCore/DataChannel/Makefile
+++ b/InspectionCore/DataChannel/Makefile
@@ -8,7 +8,7 @@ _OBJ = DatCH_WebSocket.opp websocket.o ws_server_util.opp DatCH_BPG.opp DatCH_Sh
 
 ESS_TRACK=include/*
 export MakeTemplate?= $(abspath ../Makefile.in)
-export FLAGS= -w -O3
+export FLAGS= -w -O3 -std=c++11
 ifeq ($(OS)$(CC),Windows_NTcc)
     export FLAGS+= -lws2_32
 endif
